--- a/Project Frontend/package.json
+++ b/Project Frontend/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.3",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "swiper": "^11.1.14",
